gcc/testsuite/rust/rustc/ui/rfc-2093-infer-outlives/projection.rs
#![feature(rustc_attrs)]

#[rustc_outlives]
struct Foo<'a, T: Iterator> { // { dg-error "" "" { target *-*-* } }
    bar: &'a T::Item
}

fn main() {}

